--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,7 @@ dependencies:
   audio_waveforms: ^1.0.5
   
   # Permissions
-  permission_handler: ^11.3.1
+  permission_handler: ^11.4.0
   
   # Share Functionality
   share_plus: ^7.2.2
@@ -69,6 +69,7 @@ dependencies:
   
   # Google Sign In
   google_sign_in: ^7.1.1
+  agora_rtc_engine: ^6.2.6
 
 dev_dependencies:
   flutter_test:
