--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,9 @@ dependencies:
   # Google Sign In
   google_sign_in: ^7.1.1
   agora_rtc_engine: ^6.2.6
+  
+  # SVG Support
+  flutter_svg: ^2.0.9
 
 dev_dependencies:
   flutter_test:
@@ -96,10 +99,11 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  # Assets
+  assets:
+    - assets/images/
+    - assets/animations/
+    - assets/google_logo.svg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
