--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.13.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -101,8 +102,7 @@ flutter:
 
   # Assets
   assets:
-    - assets/images/
-    - assets/animations/
+    - assets/logo.png
     - assets/google_logo.svg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -130,3 +130,8 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/logo.png"
