--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,7 +60,10 @@ dependencies:
   fl_chart: ^0.68.0
   
   # Animations
-  lottie: ^3.1.0
+  lottie: ^3.3.1
+  
+  # Responsive Design
+  flutter_screenutil: ^5.9.0
   
   # Firebase
   firebase_core: ^3.15.1
@@ -73,6 +76,8 @@ dependencies:
   
   # SVG Support
   flutter_svg: ^2.0.9
+  url_launcher: ^6.3.2
+  flutter_webrtc: ^0.14.2
 
 dev_dependencies:
   flutter_test:
@@ -102,8 +107,10 @@ flutter:
 
   # Assets
   assets:
-    - assets/logo.png
     - assets/google_logo.svg
+    - assets/logo.png
+    - assets/lottie/glowing_heart.json
+    - assets/lottie/ai_orb.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
