--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,12 @@ dependencies:
   # Animations
   lottie: ^3.3.1
   
+  # Premium UI Components
+  confetti: ^0.7.0
+  shimmer: ^3.0.0
+  flutter_staggered_animations: ^1.1.1
+  google_fonts: ^6.1.0
+  
   # Responsive Design
   flutter_screenutil: ^5.9.0
   
