--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -48,7 +48,7 @@
 	
 	<!-- Microphone permission for voice recording and speech recognition -->
 	<key>NSMicrophoneUsageDescription</key>
-	<string>Mend needs access to your microphone to record your voice during guided conversations with your partner.</string>
+	<string>This app needs access to microphone for voice therapy sessions</string>
 	
 	<!-- Speech recognition permission -->
 	<key>NSSpeechRecognitionUsageDescription</key>
