--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,13 +78,13 @@ dependencies:
 
   # Google Sign In
   google_sign_in: ^7.1.1
-  agora_rtc_engine: ^6.2.6
+
+  # ZEGOCLOUD SDK for Voice Calling
+  zego_express_engine: ^3.18.0
 
   # SVG Support
   flutter_svg: ^2.0.9
   url_launcher: ^6.3.2
-  flutter_webrtc: ^0.14.2
-  socket_io_client: ^3.1.2
   uuid: ^4.4.2
 
 dev_dependencies:
