--- a/server/package.json
+++ b/server/package.json
@@ -13,8 +13,8 @@
     "cors": "^2.8.5",
     "helmet": "^7.1.0",
     "dotenv": "^16.3.1",
-    "jsonwebtoken": "^9.0.2",
-    "crypto": "^1.0.1"
+    "express-rate-limit": "^7.1.5",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
